<?php

declare(strict_types=1);

namespace DoctrineMigrations;

use Doctrine\DBAL\Schema\Schema;
use Doctrine\Migrations\AbstractMigration;

/**
 * Auto-generated Migration: Please modify to your needs!
 */
final class Version20260717172753 extends AbstractMigration
{
    public function getDescription(): string
    {
        return 'Create cart and order storage tables';
    }

    public function up(Schema $schema): void
    {
        // this up() migration is auto-generated, please modify it to your needs
        $this->addSql('CREATE TABLE cart_items (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, catalog_element_id INT NOT NULL, quantity INT NOT NULL, sort INT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, cart_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_cart_items_cart_catalog_element ON cart_items (cart_id, catalog_element_id)');
        $this->addSql('CREATE UNIQUE INDEX uniq_cart_items_cart_sort ON cart_items (cart_id, sort)');
        $this->addSql('CREATE TABLE carts (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, owner_id INT NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_carts_owner_id ON carts (owner_id)');
        $this->addSql('CREATE TABLE order_items (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, product_snapshot_id INT NOT NULL, quantity INT NOT NULL, sort INT NOT NULL, unit_price NUMERIC(15, 2) NOT NULL, unit_discount NUMERIC(15, 2) NOT NULL, final_unit_price NUMERIC(15, 2) NOT NULL, line_total NUMERIC(15, 2) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, order_id INT NOT NULL, PRIMARY KEY (id))');
        $this->addSql('CREATE UNIQUE INDEX uniq_order_items_order_sort ON order_items (order_id, sort)');
        $this->addSql('CREATE TABLE orders (id INT GENERATED BY DEFAULT AS IDENTITY NOT NULL, owner_id INT NOT NULL, total_price NUMERIC(15, 2) NOT NULL, total_discount NUMERIC(15, 2) NOT NULL, final_price NUMERIC(15, 2) NOT NULL, created_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, updated_at TIMESTAMP(0) WITHOUT TIME ZONE NOT NULL, PRIMARY KEY (id))');

        // Manually added: PostgreSQL CHECK constraints are not generated from current Doctrine ORM attributes.
        $this->addSql('ALTER TABLE cart_items ADD CONSTRAINT chk_cart_items_quantity_positive CHECK (quantity > 0)');
        $this->addSql('ALTER TABLE orders ADD CONSTRAINT chk_orders_total_price_non_negative CHECK (total_price >= 0)');
        $this->addSql('ALTER TABLE orders ADD CONSTRAINT chk_orders_total_discount_non_negative CHECK (total_discount >= 0)');
        $this->addSql('ALTER TABLE orders ADD CONSTRAINT chk_orders_final_price_non_negative CHECK (final_price >= 0)');
        $this->addSql('ALTER TABLE orders ADD CONSTRAINT chk_orders_total_discount_lte_total_price CHECK (total_discount <= total_price)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_quantity_positive CHECK (quantity > 0)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_unit_price_non_negative CHECK (unit_price >= 0)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_unit_discount_non_negative CHECK (unit_discount >= 0)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_unit_discount_lte_unit_price CHECK (unit_discount <= unit_price)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_final_unit_price_non_negative CHECK (final_unit_price >= 0)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_line_total_non_negative CHECK (line_total >= 0)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_final_unit_price_calculated CHECK (final_unit_price = unit_price - unit_discount)');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT chk_order_items_line_total_calculated CHECK (line_total = final_unit_price * quantity)');
        $this->addSql('ALTER TABLE cart_items ADD CONSTRAINT FK_BEF484451AD5CDBF FOREIGN KEY (cart_id) REFERENCES carts (id) ON DELETE CASCADE NOT DEFERRABLE');
        $this->addSql('ALTER TABLE order_items ADD CONSTRAINT FK_62809DB08D9F6D38 FOREIGN KEY (order_id) REFERENCES orders (id) ON DELETE CASCADE NOT DEFERRABLE');
    }

    public function down(Schema $schema): void
    {
        // this down() migration is auto-generated, please modify it to your needs
        $this->addSql('ALTER TABLE cart_items DROP CONSTRAINT FK_BEF484451AD5CDBF');
        $this->addSql('ALTER TABLE order_items DROP CONSTRAINT FK_62809DB08D9F6D38');
        $this->addSql('DROP TABLE cart_items');
        $this->addSql('DROP TABLE carts');
        $this->addSql('DROP TABLE order_items');
        $this->addSql('DROP TABLE orders');
    }
}
